--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
   "extends": ["prettier", "next/core-web-vitals"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": ["warn",  {
+      "endOfLine": "auto"
+    }]
   }
 }
