--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "npx prettier --write ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -18,8 +19,11 @@
     "eslint-config-next": "13.0.2",
     "eslint-plugin-prettier": "^4.2.1",
     "next": "13.0.2",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
