--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "next": "13.0.2",
     "next-redux-wrapper": "^8.0.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
