--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "eslint-plugin-prettier": "^4.2.1",
+    "moment": "^2.29.4",
     "next": "13.0.2",
     "next-redux-wrapper": "^8.0.0",
     "nextjs-progressbar": "^0.0.16",
