--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
+    "swiper": "^8.4.5",
     "typescript": "4.8.4"
   },
   "devDependencies": {
